modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style.css
+++ b/wp-content/themes/shopay/style.css
@@ -5085,3 +5085,9 @@ highlight post css
 .mt-logo {
   width: 30%;
 }
+
+/* PERSONALIZADO SEM CHILIQUE */
+
+.home.page .cover-font, .blog .cover-font a {
+    vertical-align: bottom;
+}
