modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style.css
+++ b/wp-content/themes/shopay/style.css
@@ -5091,3 +5091,7 @@ highlight post css
 .home.page .cover-font, .blog .cover-font a {
     vertical-align: bottom;
 }
+
+.main-category-list-title {
+    padding: 10px 0;
+}
