--- a/wp-content/themes/shopay/style.css
+++ b/wp-content/themes/shopay/style.css
@@ -5095,3 +5095,7 @@ highlight post css
 .main-category-list-title {
     padding: 10px 0;
 }
+
+.shopay-cat-menu.deactivate-menu {
+	border: 0px;
+}
