modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -795,7 +795,11 @@
     display: block !important;
   }
 }
-
+@media (max-width: 1024px) {
+	.custom-logo-link img {
+		width: 70px;
+	}
+}
 @media (max-width: 768px) {
 
   .top-header-elements-wrap,
