modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style.css
+++ b/wp-content/themes/shopay/style.css
@@ -5099,3 +5099,9 @@ highlight post css
 .shopay-cat-menu.deactivate-menu {
 	border: 0px;
 }
+
+.product-categories .children {
+    position: absolute;
+    left: 280px;
+    background: #fff;
+}
