modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -802,6 +802,10 @@
 }
 @media (max-width: 768px) {
 
+	.custom-logo-link img {
+		margin-left: 50px;	
+	}
+
   .top-header-elements-wrap,
   .top-header-description {
     float: none;
