modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -807,6 +807,11 @@
 		margin-left: 50px;	
 	}
 	
+	.shopay-whishlist,
+	#site-header-cart .amount {
+		display: none;
+	}
+	
 	.header-woo-links-wrap {
 		float: right;
 		padding: 20px 10px;
