modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -806,6 +806,9 @@
 	.custom-logo-link img {
 		margin-left: 50px;	
 	}
+	.site-branding-toggle-wrapper {
+		display: none;	
+	}
 	
 	.shopay-whishlist,
 	#site-header-cart .amount {
