--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -1449,6 +1449,11 @@
 		margin-bottom: 30px;
 		padding-bottom: 20px;
 	}
+	
+	.header-woo-links-wrap {
+		width: 20%;
+		margin-left: 0;
+	}
 }
 
 @media (max-width: 480px) {
