--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -1169,6 +1169,11 @@
 		padding: 15px 0px 0px 60px;
     	font-size: 13pt;
 	}
+	
+	header-search-form-wrap .search-submit, .sm_search_form #searchsubmit {
+		margin-left: -30px;
+		height: 25px;
+	}
 }
 
 @media (max-width: 600px) {
