--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -1171,8 +1171,9 @@
 	}
 	
 	header-search-form-wrap .search-submit, .sm_search_form #searchsubmit {
-		margin-left: -30px;
-		height: 25px;
+		height: 20px;
+		left: -15px;
+    	top: 6px;
 	}
 }
 
